# ringbuf

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
src/: lib.rs  platform.rs
src/platform/: linux.rs  macos.rs  windows.rs
tests/: main.rs  readme.rs
