[package]
name = "vringbuf"
version = "0.1.0"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

description = "Ring buffer backed by mirrored virtual memory."
documentation = "https://docs.rs/vringbuf/"
repository = "https://github.com/CasualX/ringbuf"
readme = "readme.md"

[dependencies]
cfg-if = "1.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["errhandlingapi", "memoryapi", "winnt", "sysinfoapi", "handleapi"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.mach]
version = "0.3"
default-features = false
